--- a/.circleci/jobs/bump-dev-version.yaml
+++ b/.circleci/jobs/bump-dev-version.yaml
@@ -4,8 +4,8 @@ docker:
 - image: cimg/node:15.8
 
 steps:
-- !add-ssh: ssh-fingerprint-1
+- !:add-ssh ssh-fingerprint-1
 
 - checkout
 
-- !bin: Bump dev version
+- !:bin Bump dev version
