--- a/.circleci/jobs/github-release.yaml
+++ b/.circleci/jobs/github-release.yaml
@@ -6,10 +6,10 @@ docker:
 working_directory: ~/calva
 
 steps:
-- !attach-workspace: /tmp
+- !:attach-workspace /tmp
 
-- !cmd:
+- !:cmd
   - Restore build
   - rmdir ~/calva && cp -r /tmp/build ~/calva
 
-- !bin: Publish Release on GitHub
+- !:bin Publish Release on GitHub
