--- a/.circleci/jobs/marketplace-publish.yaml
+++ b/.circleci/jobs/marketplace-publish.yaml
@@ -6,12 +6,12 @@ docker:
 working_directory: ~/calva
 
 steps:
-- !attach-workspace: /tmp
+- !:attach-workspace /tmp
 
-- !cmd:
+- !:cmd
   - Restore build
   - rmdir ~/calva && cp -r /tmp/build ~/calva
 
-- !bin*:
+- !:bin*
   - Publish to the marketplace
   - publish-to-the-marketplace-2
