--- a/.circleci/jobs/prettier-check.yaml
+++ b/.circleci/jobs/prettier-check.yaml
@@ -6,12 +6,12 @@ docker:
 working_directory: ~/calva
 
 steps:
-- !attach-workspace: /tmp
+- !:attach-workspace /tmp
 
-- !cmd:
+- !:cmd
   - Restore build
   - rmdir ~/calva && cp -r /tmp/build ~/calva
 
-- !cmd:
+- !:cmd
   - Run prettier format check
   - npm run prettier-check
