--- a/.circleci/workflows/release-publish.yaml
+++ b/.circleci/workflows/release-publish.yaml
@@ -1,91 +1,59 @@
+!yamlscript/v0/
+
+# Define 2 default mappings for clean reuse:
+default-filters =::
+  branches:
+    ignore: /.*/
+  tags:
+    only: /^v\d+\.\d+\.\d+-?.*/
+
+# XXX This might not be required to differ from default-filters
+default-filters-2 =::
+  branches:
+    ignore: /.*/
+  tags:
+    only: /^v\d+\.\d+\.\d+$/
+
+
 jobs:
 - checkout:
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+-?.*/
+    filters:: default-filters
 
 - build:
-    requires:
-    - checkout
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+-?.*/
+    requires: [checkout]
+    filters:: default-filters
 
 - prettier-check:
-    requires:
-    - build
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+-?.*/
+    requires: [build]
+    filters:: default-filters
 
 - eslint-check:
-    requires:
-    - build
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+-?.*/
+    requires: [build]
+    filters:: default-filters
 
 - test-grammar:
-    requires:
-    - build
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+-?.*/
+    requires: [build]
+    filters:: default-filters
 
 - test-cljslib:
-    requires:
-    - build
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+-?.*/
+    requires: [build]
+    filters:: default-filters
 
 - test-integration:
-    requires:
-    - build
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+-?.*/
+    requires: [build]
+    filters:: default-filters
 
 - test-e2e:
-    requires:
-    - build
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+-?.*/
+    requires: [build]
+    filters:: default-filters
 
 - test-e2e-sub-projects:
-    requires:
-    - build
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+-?.*/
+    requires: [build]
+    filters:: default-filters
 
 - test-ts-unit:
-    requires:
-    - build
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+-?.*/
+    requires: [build]
+    filters:: default-filters
 
 - github-release:
     requires:
@@ -97,49 +65,25 @@ jobs:
     - test-e2e
     - test-e2e-sub-projects
     - test-ts-unit
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+-?.*/
+    filters:: default-filters
     context: Calva
 
 - marketplace-publish:
-    requires:
-    - github-release
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+$/
+    requires: [github-release]
+    filters:: default-filters-2
     context: Calva
 
 - open-vsx-publish:
-    requires:
-    - github-release
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+$/
+    requires: [github-release]
+    filters:: default-filters-2
     context: Calva
 
 - merge-dev-into-published:
-    requires:
-    - marketplace-publish
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+$/
+    requires: [marketplace-publish]
+    filters:: default-filters-2
     context: Calva
 
 - bump-dev-version:
-    requires:
-    - merge-dev-into-published
-    filters:
-      branches:
-        ignore: /.*/
-      tags:
-        only: /^v\d+\.\d+\.\d+$/
+    requires: [merge-dev-into-published]
+    filters:: default-filters-2
     context: Calva
